crates/ir/tests/ir/snapshots/main__ir__lower__ownership__borrow_let_then_field.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__borrow_let_then_field

struct Server { listener: ~Listener }
struct Listener { fd: Int }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]

fn make_server() -> ~Server =
  let v0: ~Listener = construct Listener(0)
  let v1: ~Server = construct Server(v0)
  v1

fn accept(v2: ~Listener) -> Int =
  42

fn consume(v3: ~Server) -> Int =
  0

fn test() -> Int =
  let v4: ~Server = call make_server()
  let v5: ~Listener = project v4.0
  let v6: Int = call accept(v5)
  let v7: Int = call consume(v4)
  v7
