crates/ir/tests/ir/snapshots/main__ir__lower__ownership__borrow_observational_alias_ok.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__borrow_observational_alias_ok

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn read1(v0: String) -> Int =
  1

fn read2(v1: String) -> Int =
  2

fn combine(v2: Int, v3: Int) -> Int =
  let v4: Int = add_int(v2, v3)
  v4

fn test(v5: String) -> Int =
  let v6: Int = call read1(v5)
  let v7: Int = call read2(v5)
  let v8: Int = call combine(v6, v7)
  v8
