crates/ir/tests/ir/snapshots/main__ir__lower__ownership__borrow_param_subfield_reborrow.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__borrow_param_subfield_reborrow

struct Inner { name: ~String }
struct Outer { inner: ~Inner }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]

fn len(v0: ~String) -> Int =
  42

fn f(v1: ~Outer) -> Int =
  let v2: ~Inner = project v1.0
  let v3: ~String = project v2.0
  let v4: Int = call len(v3)
  v4
