crates/ir/tests/ir/snapshots/main__ir__lower__ownership__borrow_sequential_calls.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__borrow_sequential_calls

struct State { count: Int }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]

fn read(v0: ~State, v1: Int) -> Int =
  v1

fn write(v2: ~State, v3: Int) -> Int =
  v3

fn combine(v4: Int, v5: Int) -> Int =
  let v6: Int = add_int(v4, v5)
  v6

fn test(v7: ~State) -> Int =
  let v8: Int = call read(v7, 1)
  let v9: Int = call write(v7, 2)
  let v10: Int = call combine(v8, v9)
  v10
